--- a/getGoogleImgURL.ipynb
+++ b/getGoogleImgURL.ipynb
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -932,6 +932,7 @@
    "source": [
     "def getURLfromGoogleImg_J(foodName):\n",
     "    from time import sleep\n",
+    "    import time, re\n",
     "    \n",
     "    from bs4 import BeautifulSoup\n",
     "    from splinter import Browser\n",
@@ -939,7 +940,7 @@
     "    url = 'https://www.google.com.tw/search?hl=zh-TW&site=imghp&tbm=isch&source=hp&biw=1450&bih=806&q='\n",
     "    browser.visit(url + foodName)\n",
     "    \n",
-    "    for i in range(1,20):\n",
+    "    for i in range(1,10):\n",
     "        browser.execute_script(\"window.scrollTo(0, document.body.scrollHeight)\")\n",
     "        sleep(3)\n",
     "        if i == 5:\n",
@@ -947,6 +948,7 @@
     "            sleep(1)\n",
     "        \n",
     "    soup = BeautifulSoup(browser.html, 'lxml')\n",
+    "    count = 0\n",
     "    rg_meta_list=soup.select('div.rg_meta')\n",
     "    # rg_meta_list\n",
     "    for tag in rg_meta_list:\n",
@@ -963,16 +965,29 @@
     "                f2.write(dict3['ou'] + \"\\n\")\n",
     "        except:\n",
     "            print(str(count) + \" ERROR!!!\\n\" + tag.text)\n",
-    "    print(foodName +'.txt has ' + str(count) + ' URLs.')"
+    "    print(foodName +'.txt has ' + str(count) + ' URLs.')  #'str' object is not callable?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-38-ffc88b94aa7e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgetURLfromGoogleImg_J\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'地瓜葉'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-37-4c55f862e9d5>\u001b[0m in \u001b[0;36mgetURLfromGoogleImg_J\u001b[1;34m(foodName)\u001b[0m\n\u001b[0;32m     34\u001b[0m         \u001b[1;32mexcept\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\" ERROR!!!\\n\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mtag\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfoodName\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;34m'.txt has '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' URLs.'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "getURLfromGoogleImg_J('地瓜葉')"
    ]
